--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>Goods List</title>
+  <title>Cart List</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link rel="stylesheet" href="/css/bootstrap.min.css">
@@ -10,7 +10,7 @@
 /*   html, body { font-family: Roboto, AppleSDGothicNeoM00; } */
   .goods_c {
   	width: 23%;
-  	height : 120px;
+  	height : 150px;
   	float: left;
   	margin : 5px;
   	border: 1px solid black;
@@ -21,87 +21,79 @@
 
 <body>
 <div class="container_top">
-	<div>장바구니 담기
-		<div style="float: right;">장바구니로 이동</div>
+	<div><span style="cursor: pointer;" id="multyPayment">결제하기 (<span id="cartCount"></span>)</span>
+		<div id="nextBtn" style="float: right; margin-right: 5%; cursor: pointer;">상품 리스트로 이동</div>
 	</div>
+	<div id="multiDelete" style="cursor: pointer;">삭제하기</div>
 	<div>가격 : <span id="checked_price">0</span>( 배송비 : <span id="checked_shipping">0</span>)</div>
 	<div>전체선택 <input type="checkbox" id="all_checked"></div>
 	
 </div>
-<form action="/cart.do" id="inputForm">
+<form action="/" id="inputForm">
 	<div class="container_middle">
 	</div>
 </form>
 
 <script type="text/javascript" src="/js/jquery-3.4.0.min.js"></script>
-<script type="text/javascript" src="/js/popper.min.js"></script>
-<script type="text/javascript" src="/js/bootstrap.min.js"></script>
 
 <script>
+	var goodsData = {};
 	var shippings={};
 	var SHIPPING_FREE = "FREE";
+	var SHIPPING_METHOD = ['method', 'price', 'canBundle'];
 	
     $(function () {
-		goodsList();
+    	cartList();
+    	cartCount();
         bindEvt();
     });
     
-    function goodsList() {
+    function cartList() {
+    	$('.container_middle').empty();
+    	var count = cartCount();
+    	if (count < 1) return false;
 		$.ajax({
-	        url : 'goods',
+	        url : 'cart',
 	        type: "POST",
-	        dataType: "JSON",
+	        dataType : "json",
 	        async:false,
 	        success : function(data){
-	            var goods = data.goods;
+	        	console.log(data);
 	            var str='';
+	            var goods = data;
 	            for (var i=0; i<goods.length; i++) {
+	            	goodsData[goods[i].cart.id] = goods[i].cart;
+	            	goodsData[goods[i].cart.id].name = goods[i].name;
 	            	var shipping = {};
-	            	shipping.method = goods[i].shipping.method;
-	            	shipping.price = goods[i].shipping.price;
-	            	shipping.canBundle = goods[i].shipping.canBundle;
+	            	for (var method of SHIPPING_METHOD) {
+	            		shipping[method] = goods[i].shipping[method];
+	            	}
 	            	shipping.provider = goods[i].provider;
 	            	shippings[goods[i].id+"_"+goods[i].provider] = shipping;
 	            	
 	            	str += '<div class="goods_c">'
 	            		+ '<div>'
-	            		+ '장바구니 담기'
-	            		+ '</div>'
-	            		+ '<div><input type="checkbox" id="check_'+goods[i].id+"_"+goods[i].provider+'" value="'+goods[i].price+'">'
+	            		+ '<span style="cursor: pointer;" class="singlePayment" id="'+goods[i].cart.id+'">'
+	            		+ '결제하기'
+	            		+ '</span>'
+	            		+ '<span class="deleteGoods" style="float:right; cursor: pointer;" id="'+goods[i].cart.id+'">' 
+	            		+ '삭제하기'
+	            		+ '</span></div>'
+	            		+ '<div>'
+	            		+ '<input type="checkbox" id="check_'+goods[i].id+"_"+goods[i].provider+'" value="'+goods[i].price+'" data-cartId="'+goods[i].cart.id+'">'
 	            		+ goods[i].name
-	            		+ '</div>'
-	            		+ '<div><select id="goods_option">'
-	            		+ '<option id="" selected>'
-	            		+ '옵션을 선택하세요'
-	            		+ '</option>';
-						
-						var option_stock = '<select id="option_stock">';
-//	             		var option_stock = '<select id="option_stock" style="display:none">';
-						
-	            		for (var j=0; j<goods[i].options.length; j++) {
-	            			var option = goods[i].options[j];
-	            			var option_str = option.color + ' / ' + option.size + ' / 수량 : '+option.stock;
-	            			str += '<option id='
-	            				+ option.id
-	            				+'>'
-	            				+ option_str
-	            				+ '</option>';
-	            			
-	            			var stock = option.stock == 0 ? '품절' : option.stock; 
-	            			option_stock += '<option id='
-	            						 + 'stock_' + option.id 
-	            						 +'>'
-	            						 + stock
-	            						 + '</option>';
-	            			
-	            		}
-	            		option_stock += '</select>';
+	            		+ '</div>';
 	            		
-	            	str	+= '</select>'
-	            		+ option_stock
-	            		+ '</div>'
-	            		+ '<div id = "goods_price">'
-	            		+ '가격 : '+goods[i].price
+            		var option_str = "";
+            		for (var j=0; j<goods[i].options.length; j++) {
+            			var option = goods[i].options[j];
+            			var option_str = option.color + ' / ' + option.size + ' / 수량 : ';
+            		}
+           			str += option_str+goods[i].cart.amount;
+           			
+	            	str	+= '<div id = "goods_price">'
+	            		+ '가격 : '+goods[i].price + '<br>'
+	            		+ '배송비 : '+goods[i].shipping.price
 	            		+ '</div>'
 	            		+ '</div>';
 	            	
@@ -109,60 +101,133 @@
 	            $('.container_middle').html(str);
 	        }
 	    });
-		console.log(shippings);
+    }
+    
+    function cartCount() {
+    	var count = 0;
+    	$.ajax({
+            url : 'get/cartCount',
+            type: "POST",
+            dataType : "json",
+            async:false,
+            success : function(data){
+            	$('#cartCount').text(data.count);
+            	count = data.count;
+            }
+    	});
+    	return count;
     }
     
     function bindEvt() {
-    	$('[id^=check_]').click(function () {
+    	
+    	$('#nextBtn').click(function () {
+    		$('#inputForm').submit();
+    	});
+    	
+    	//단일 체크박스 선택
+        $('[id^=check_]').click(function () {
 			calculationPrice();
 		});
+    	
+      	//전체 선택
+    	$('#all_checked').click(function () {
+            if ($('#all_checked').prop('checked')) {
+                $('input[type=checkbox]').prop('checked', true); 
+            } else {
+                $('input[type=checkbox]').prop('checked', false);
+            }
+            calculationPrice();
+        });
         
-		 //전체선택
-	    $('#all_checked').click(function () {
-	        if ($('#all_checked').prop('checked')) {
-	            $('input[type=checkbox]').prop('checked', true); 
-	        } else {
-	            $('input[type=checkbox]').prop('checked', false);
-	        }
-	        calculationPrice();
-	    });
+        //가격 계산
+        function calculationPrice() {
+    		var price = 0;
+    		var checked_shipping = {};
+    		var shppingPrice = 0;
+    		$('#inputForm').find('input[type=checkbox][id^=check_]').each(function(index, item) {
+    			if ($(this).is(":checked")) {
+    				price += parseInt($(this).val());
+    				var id = $(this).attr('id').substring(6);
+    				var provider = id.split('_')[1]; 
+    				if (shippings[id].method != SHIPPING_FREE) { //선불 배송비
+    					if (shippings[id].canBundle == true && shippings[id].price != 0) { //묶음 배송 가능 상품
+    						if (checked_shipping[provider]) { // 묶음 배송 상품 중 가격이 낮은 상품의 배송비로 책정
+    							checked_shipping[provider] = Math.min(checked_shipping[provider], shippings[id].price);
+    						} else {
+    							checked_shipping[provider] = shippings[id].price;
+    						}
+    					} else {// 묶음 배송 불가능 상품
+    						checked_shipping[id] = shippings[id].price;
+    					}
+    				}
+    			}
+    		});
+    		
+    		for (var prop in checked_shipping) {
+    			shppingPrice += checked_shipping[prop];
+    		}
+    		
+    		$('#checked_shipping').text(shppingPrice);
+    		$('#checked_price').text(price + shppingPrice);
+    	 }
+         
+		 //단일 상품 결제, 삭제
+		 $('.singlePayment, .deleteGoods').click(function () {
+			var url = "";
+			var $thisClass = $(this).attr('class');
+				url = $thisClass.indexOf("delete") >= 0 ? 'delete/cart/' : 'put/payment/';
+			var cartId = $(this).attr('id');
+			var idData = goodsData[cartId];
+			
+			$.ajax({
+		       url : url+cartId,
+		       type: "POST",
+		       contentType: 'application/json',
+		       async:false,
+		       dataType : "json",
+		       data : JSON.stringify(idData),
+		       success : function(data){
+	    		   alert(data.error);
+		       }
+			});
+			cartCount();
+			cartList();
+			calculationPrice();
+		 });
 		 
-		 function calculationPrice() {
-			var price = 0;
-			var checked_shipping = {};
-			var shppingPrice = 0;
+		 
+		//체크된 상품 결제, 삭제
+		$('#multyPayment, #multiDelete').click(function () {
+			var putAlldata = [];
+			var flag = false;
 			$('#inputForm').find('input[type=checkbox][id^=check_]').each(function(index, item) {
 				if ($(this).is(":checked")) {
-					price += parseInt($(this).val());
-					var id = $(this).attr('id').substring(6);
-					var provider = id.split('_')[1]; 
-					if (shippings[id].method != SHIPPING_FREE) {
-						if (shippings[id].canBundle == true && shippings[id].price != 0) {
-							if (checked_shipping[provider]) {
-								checked_shipping[provider] = Math.min(checked_shipping[provider], shippings[id].price);
-							} else {
-								checked_shipping[provider] = shippings[id].price;
-							}
-						} else {
-							checked_shipping[id] = shippings[id].price;
-						}
-					}
+					 var saveData = goodsData[item.dataset.cartid];
+					 flag = true;
+					 putAlldata.push(saveData);
 				}
 			});
+			if (!flag) return false;
 			
-			for (var prop in checked_shipping) {
-				shppingPrice += checked_shipping[prop];
-			}
+			var url = "";
+			var $thisClass = $(this).attr('id');
+				url = $thisClass.indexOf("Delete") >= 0 ? 'delete/cart' : 'put/payment';
 			
-			if ($('input[type=checkbox]').prop('checked')) {
-				$('#all_checked').prop('checked');
-			} else {
-				$('#all_checked').prop('unchecked');
-			}
-			
-			$('#checked_shipping').text(shppingPrice);
-			$('#checked_price').text(price + shppingPrice);
-		 }
+			$.ajax({
+		       url : url,
+		       type: "POST",
+		       contentType: 'application/json',
+		       dataType : "json",
+		       async:false,
+		       data : JSON.stringify(putAlldata),
+		       success : function(data){
+	    		   alert(data.error);
+		       }
+			});
+			cartCount();
+			cartList();
+			calculationPrice();
+		 });
     }
 </script>
 
