--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
 /*   html, body { font-family: Roboto, AppleSDGothicNeoM00; } */
   .goods_c {
   	width: 23%;
-  	height : 120px;
+  	height : 150px;
   	float: left;
   	margin : 5px;
   	border: 1px solid black;
@@ -21,29 +21,28 @@
 
 <body>
 <div class="container_top">
-	<div><span style="cursor: pointer;" id="putAllGoodsToCart">장바구니 담기</span>
+	<div><span style="cursor: pointer;" id="putAllGoodsToCart">장바구니 담기 (<span id="cartCount"></span>)</span>
 		<div id="nextBtn" style="float: right; margin-right: 5%; cursor: pointer;">장바구니로 이동</div>
 	</div>
 	<div>가격 : <span id="checked_price">0</span>( 배송비 : <span id="checked_shipping">0</span>)</div>
 	<div>전체선택 <input type="checkbox" id="all_checked"></div>
 	
 </div>
-<form action="/cart.do" id="inputForm">
+<form action="/cart" id="inputForm">
 	<div class="container_middle">
 	</div>
 </form>
 
 <script type="text/javascript" src="/js/jquery-3.4.0.min.js"></script>
-<script type="text/javascript" src="/js/popper.min.js"></script>
-<script type="text/javascript" src="/js/bootstrap.min.js"></script>
-
 <script>
 	var goodsData = {};
 	var shippings={};
 	var SHIPPING_FREE = "FREE";
 	var SHIPPING_METHOD = ['method', 'price', 'canBundle'];
+	
     $(function () {
 		goodsList();
+		cartCount();
         bindEvt();
     });
     
@@ -54,10 +53,12 @@
 	        dataType : "json",
 	        async:false,
 	        success : function(data){
+	        	console.log(data.goods);
 	            var goods = data.goods;
 	            var str='';
 	            for (var i=0; i<goods.length; i++) {
 	            	goodsData[goods[i].id] = goods[i];
+	            	goodsData[goods[i].id].name = goods[i].name;
 	            	var shipping = {};
 	            	for (var method of SHIPPING_METHOD) {
 	            		shipping[method] = goods[i].shipping[method];
@@ -96,7 +97,8 @@
 						+ '<div class="stock_amount"></div>'
 	            		+ '</div>'
 	            		+ '<div id = "goods_price">'
-	            		+ '가격 : '+goods[i].price
+	            		+ '가격 : '+goods[i].price + '<br>'
+	            		+ '배송비 : '+goods[i].shipping.price
 	            		+ '</div>'
 	            		+ '</div>';
 	            	
@@ -104,35 +106,87 @@
 	            $('.container_middle').html(str);
 	        }
 	    });
-		console.log(goodsData);
-		console.log(shippings);
+    }
+    
+    function cartCount() {
+    	var count = 0;
+    	$.ajax({
+            url : 'get/cartCount',
+            type: "POST",
+            dataType : "json",
+            async:false,
+            success : function(data){
+            	$('#cartCount').text(data.count);
+            	count = data.count;
+            }
+    	});
+    	return count;
     }
     
     function bindEvt() {
     	
     	$('#nextBtn').click(function () {
-    		
+    		var count = cartCount();
+    		if (count < 1) {
+    			alert("장바구니가 비어 있습니다.");
+    			return false;
+    		}
+    		$('#inputForm').submit();
     	});
+		
+    	//가격 계산
+        function calculationPrice() {
+    		var price = 0;
+    		var checked_shipping = {};
+    		var shppingPrice = 0;
+    		$('#inputForm').find('input[type=checkbox][id^=check_]').each(function(index, item) {
+    			if ($(this).is(":checked")) {
+    				price += parseInt($(this).val());
+    				var id = $(this).attr('id').substring(6);
+    				var provider = id.split('_')[1]; 
+    				if (shippings[id].method != SHIPPING_FREE) { //선불 배송비
+    					if (shippings[id].canBundle == true && shippings[id].price != 0) { //묶음 배송 가능 상품
+    						if (checked_shipping[provider]) { // 묶음 배송 상품 중 가격이 낮은 상품의 배송비로 책정
+    							checked_shipping[provider] = Math.min(checked_shipping[provider], shippings[id].price);
+    						} else {
+    							checked_shipping[provider] = shippings[id].price;
+    						}
+    					} else {// 묶음 배송 불가능 상품
+    						checked_shipping[id] = shippings[id].price;
+    					}
+    				}
+    			}
+    		});
+    		
+    		for (var prop in checked_shipping) {
+    			shppingPrice += checked_shipping[prop];
+    		}
+    		
+    		$('#checked_shipping').text(shppingPrice);
+    		$('#checked_price').text(price + shppingPrice);
+    	 }
     	
-    	$('[id^=check_]').click(function () {
+    	//단일 체크박스 선택
+        $('[id^=check_]').click(function () {
 			calculationPrice();
 		});
+    	
+    	//전체 선택
+        $('#all_checked').click(function () {
+            if ($('#all_checked').prop('checked')) {
+                $('input[type=checkbox]').prop('checked', true); 
+            } else {
+                $('input[type=checkbox]').prop('checked', false);
+            }
+            calculationPrice();
+        });
         
-		 //전체선택
-	    $('#all_checked').click(function () {
-	        if ($('#all_checked').prop('checked')) {
-	            $('input[type=checkbox]').prop('checked', true); 
-	        } else {
-	            $('input[type=checkbox]').prop('checked', false);
-	        }
-	        calculationPrice();
-	    });
-		 
+		//옵션 선택
 		$('.goods_option').change(function () {
 			var id = $(this).parent().attr('id');
 			var goodsDetailId = $(this).children(':selected').attr('id');
 			$(this).data('selected', goodsDetailId);
-			console.log($(this).data('selected'));
+			
 			var selectedStock = 0;
 			var options = goodsData[id].options;
 			for (var option of options) {
@@ -151,65 +205,21 @@
 			$('.option_stock').on("change", selectAmount);
 		});
 		
+		//수량 선택
 		function selectAmount() {
 			var id = $(this).parent().parent().attr('id');
 			var goodsDetailId = $(this).parent().siblings('.goods_option').data('selected');
 			var amount = $(this).children(':selected').attr('id');
 			
 			var insertId = "check_" + id;
-			$('input[id^="'+insertId+'"]').data('goodsid', id);
-			$('input[id^="'+insertId+'"]').data('goodsdetailid', goodsDetailId);
+			$('input[id^="'+insertId+'"]').data('goods_id', id);
+			$('input[id^="'+insertId+'"]').data('goods_detail_id', goodsDetailId);
 			$('input[id^="'+insertId+'"]').data('amount', amount);
-			console.log($('input[id^="check_'+id+'"]').data());
+			$('input[id^="'+insertId+'"]').data('name', goodsData[id].name);
+			console.log($('input[id^="'+insertId+'"]').data());
 		}
 		 
-		 function calculationPrice() {
-			var price = 0;
-			var checked_shipping = {};
-			var shppingPrice = 0;
-			$('#inputForm').find('input[type=checkbox][id^=check_]').each(function(index, item) {
-				if ($(this).is(":checked")) {
-					price += parseInt($(this).val());
-					var id = $(this).attr('id').substring(6);
-					var provider = id.split('_')[1]; 
-					if (shippings[id].method != SHIPPING_FREE) {
-						if (shippings[id].canBundle == true && shippings[id].price != 0) {
-							if (checked_shipping[provider]) {
-								checked_shipping[provider] = Math.min(checked_shipping[provider], shippings[id].price);
-							} else {
-								checked_shipping[provider] = shippings[id].price;
-							}
-						} else {
-							checked_shipping[id] = shippings[id].price;
-						}
-					}
-				}
-			});
-			
-			for (var prop in checked_shipping) {
-				shppingPrice += checked_shipping[prop];
-			}
-			
-			if ($('input[type=checkbox]').prop('checked')) {
-				$('#all_checked').prop('checked');
-			} else {
-				$('#all_checked').prop('unchecked');
-			}
-			
-			$('#checked_shipping').text(shppingPrice);
-			$('#checked_price').text(price + shppingPrice);
-		 }
-		 
-		 function createSelectBox(stock) {
-			var str = "";
-			str += '</select>';
-			for (var i=1; i<=stock; i++) {
-				str += '<option id="'+i+'">' + i + '</option>'
-			}
-			str += '</select>';
-			return str;
-		 }
-		 
+		 //단일 상품 장바구니에 추가
 		 $('.putGoodsToCart').click(function () {
 			var goodsId = $(this).attr('id');
 			var idData = $('input[id^="check_'+goodsId+'"]').data();
@@ -217,43 +227,59 @@
 				alert("상품 옵션과 수량을 선택 해 주세요.");
 				return false;
 			}
-			console.log(goodsId);
-			console.log(JSON.stringify($('input[id^="check_'+goodsId+'"]').data()));
+			
 			$.ajax({
-			       url : 'put/cart/'+goodsId,
-			       type: "POST",
-			       contentType: 'application/json',
-			       dataType : "json",
-			       data : JSON.stringify($('input[id^="check_'+goodsId+'"]').data()),
-			       success : function(data){
-			       	
-			       }
+		       url : 'put/cart/'+goodsId,
+		       type: "POST",
+		       contentType: 'application/json',
+		       async:false,
+		       dataType : "json",
+		       data : JSON.stringify($('input[id^="check_'+goodsId+'"]').data()),
+		       success : function(data){
+	    		   alert(data.error);
+		       }
 			});
+			cartCount();
 		 });
 		 
+		 //체크된 상품 장바구니에 추가
 		 $('#putAllGoodsToCart').click(function () {
-				
-			$.ajax({
-			       url : 'put/cart',
-			       type: "POST",
-			       contentType: 'application/json',
-			       dataType : "json",
-			       data : {},
-			       success : function(data){
-			       	
-			       }
+			 var putAlldata = [];
+			 var flag = false;
+			 $('#inputForm').find('input[type=checkbox][id^=check_]').each(function(index, item) {
+				if ($(this).is(":checked")) {
+					 var saveData = $('#'+item.id).data();
+					 if (!validataionCheck(saveData)) {
+						alert("상품 옵션과 수량을 선택 해 주세요.");
+						flag = false;
+						return false;
+					 }
+					 flag = true;
+					 putAlldata.push(saveData);
+				}
 			});
+			if (!flag) return false;
+			$.ajax({
+		       url : 'put/cart',
+		       type: "POST",
+		       contentType: 'application/json',
+		       dataType : "json",
+		       async:false,
+		       data : JSON.stringify(putAlldata),
+		       success : function(data){
+	    		   alert(data.error);
+		       }
+			});
+			cartCount();
 		 });
 		 
-		 function validataionCheck(data) {
-			 for ( var name in data ) {
-			        return true;
-			    }
-			    return false;
+	    function validataionCheck(data) {
+			for ( var name in data ) {
+		        return true;
+		    }
+		    return false;
 		 }
-		 
     }
 </script>
-
 </body>
 </html>
