--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
   <title>Goods List</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <meta name="_csrf" th:content="${_csrf.token}"><meta name="_csrf_header" th:content="${_csrf.headerName}">
   <link rel="stylesheet" href="/css/bootstrap.min.css">
 </head>
 <style>
@@ -23,6 +24,7 @@
 <div class="container_top">
 	<div><span style="cursor: pointer;" id="putAllGoodsToCart">장바구니 담기 (<span id="cartCount"></span>)</span>
 		<div id="nextBtn" style="float: right; margin-right: 5%; cursor: pointer;">장바구니로 이동</div>
+		<div id="logout" style="float: right; margin-right: 5%; cursor: pointer;" onclick="$('#logoutForm').submit();">로그아웃</div>
 	</div>
 	<div>가격 : <span id="checked_price">0</span>( 배송비 : <span id="checked_shipping">0</span>)</div>
 	<div>전체선택 <input type="checkbox" id="all_checked"></div>
@@ -33,8 +35,15 @@
 	</div>
 </form>
 
+<form action="/logout" id="logoutForm">
+</form>
+
 <script type="text/javascript" src="/js/jquery-3.4.0.min.js"></script>
 <script>
+var token = $("meta[name='_csrf']").attr("content");
+var header = $("meta[name='_csrf_header']").attr("content");
+$(document).ajaxSend(function(e, xhr, options) { xhr.setRequestHeader(header, token); });
+
 	var goodsData = {};
 	var shippings={};
 	var SHIPPING_FREE = "FREE";
