--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,8 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<form action="#" th:action="@{/authenticate}" method="post"
-		th:object="${User}">
+	<form action="#" th:action="@{/authenticate}" method="post" th:object="${User}">
 		<div>
 			Email: <input type="email" th:field="*{email}" autofocus />
 		</div>
