--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-<meta charset="EUC-KR">
-<title>Insert title here</title>
+  <title>login</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
 </head>
 <body>
 	<form action="#" th:action="@{/authenticate}" method="post" th:object="${User}">
