--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -270,7 +270,7 @@
 			});
 			if (!flag) return false;
 			$.ajax({
-		       url : 'carts/all',
+		       url : 'carts',
 		       type: "POST",
 		       contentType: 'application/json',
 		       dataType : "json",
