1. [수정] : server side refactoring, 비동기 블록, 비동기 논블록 방식으로 구현해서 성능을 올려보자

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -63,8 +63,8 @@
 	        dataType : "json",
 	        async:false,
 	        success : function(data){
-	        	console.log(data.goods);
-	            var goods = data.goods;
+	        	console.log(data.goodsList);
+	            var goods = data.goodsList;
 	            var str='';
 	            for (var i=0; i<goods.length; i++) {
 	            	goodsData[goods[i].id] = goods[i];
